--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "CycleServiceProvider"
+                "DigitalLab\\Cycle\\Providers\\DigitalLabCycleServiceProvider"
             ]
         }
     },
